# CudaIngestion

./: .env.example  .gitignore  Makefile  README.md  kernels_parquet_structure.md  pyproject.toml
.github/workflows/: ci.yml  ingest_cron.yml
scripts/: export_kernels.py  fix_db_indexes.py  populate_discovered_repos.py  reprocess_repos.py
src/: main.py
src/core/: __init__.py  config.py  logger.py
src/db/: __init__.py  client.py  schema.sql
src/processor/: __init__.py  annotator.py  filter.py
src/scraper/: __init__.py  github_client.py  query_builder.py
tests/: test_pipeline.py
